<resources>
    <string name="app_name">Ej3_STUDENTS_APVG</string>
    <string name="title_label">Registro de Estudiantes</string>
    <string name="button_submit">Enviar</string>
    <string name="button_check">Ir a Registro</string>
    <string name="button_clear">Limpiar Registro</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_apellidos">Apellidos</string>
    <string name="hint_genero">Género:</string>
    <string name="hint_no_cuenta">No. de Cuenta</string>
    <string name="toastIncompleteForm"> Todos los campos deben ser llenados </string>
    <string name="genderMale"> Masculino </string>
    <string name="genderFemale"> Femenino </string>
    <string name="toastIncompleteNoAccount"> El número de cuenta debe ser de 10 dígitos </string>
    <string name="toastRegisterCleared"> El registro ha sido limpiado </string>
    <string name="succesfulRegister"> Alumno registrado con éxito </string>
    <string name="identificationToast"> El elemento seleccionado tiene el ID: </string>
    <string name="emptyRegister"> El registro está vacío </string>
</resources>
