<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/studentRegister"
        android:layout_width="176dp"
        android:layout_height="107dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/title_label"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <EditText
        android:id="@+id/Nombre"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="500dp"
        android:hint="@string/hint_name"
        android:ems="10"
        android:inputType="text"
        android:maxLength="15"
        android:textSize="25sp"
        android:background="@drawable/edit_text_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentRegister" />

    <!-- Caja de texto - Fecha de nacimiento -->
    <EditText
        android:id="@+id/apPaterno"
        android:layout_width="230dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="500dp"
        android:hint="@string/hint_apellidos"
        android:ems="10"
        android:inputType="text"
        android:maxLength="10"
        android:textSize="14sp"
        android:background="@drawable/edit_text_border"
        app:layout_constraintTop_toBottomOf="@+id/Nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <!-- Caja de texto - Número de Cuenta -->
    <EditText
        android:id="@+id/No_Cuenta"
        android:layout_width="230dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="500dp"
        android:hint="@string/hint_no_cuenta"
        android:ems="10"
        android:inputType="number"
        android:maxLength="10"
        android:textSize="20sp"
        android:background="@drawable/edit_text_border"
        app:layout_constraintTop_toBottomOf="@+id/apPaterno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>



    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/No_Cuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genderMale" />


        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/radioGroup1"
            android:layout_below="@+id/radioGroup1"
            android:text="@string/genderFemale" />


    </RadioGroup>


    <Button
        android:id="@+id/bttnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_submit"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup1" />

    <Button
        android:id="@+id/bttnCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_check"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bttnSubmit" />

    <Button
        android:id="@+id/bttnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_clear"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bttnSubmit" />

</androidx.constraintlayout.widget.ConstraintLayout>